--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.tga filter=lfs diff=lfs merge=lfs -text
+*.bundle filter=lfs diff=lfs merge=lfs -text
+*.so filter=lfs diff=lfs merge=lfs -text
+FirebaseCppApp*.so filter=lfs diff=lfs merge=lfs -text
