--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 /backup.local/
 /[Uu]ser[Ss]ettings/
 
+/[Bb]undles/
+
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
@@ -57,6 +59,7 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+*.bundle
 
 # Crashlytics generated file
 crashlytics-build.properties
